# cleansheet-voice-to-fhir

./: .gitignore  KNOWN_ISSUES.md  LICENSE  NOTICE.md  PRODUCTION_NOTES.md  README.md  launch_servers.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: boundary-check.yml  ci.yml  release.yml
configs/: README.md  cloud.yaml  edge-cpu.yaml  edge-jetson.yaml  emergency.yaml  local.yaml  radiology.yaml
demo/: README.md  index.html
doc/: reference-architecture.html  reference-architecture.md
examples/: README.md  basic_usage.py  batch_processing.py  custom_config.py  extract_entities_only.py  fhir_server_integration.py  live_capture.py  process_audio_file.py  streaming_realtime.py  workflow_comparison.py
scripts/: boundary_check.py  download_models.py
src/voice_to_fhir/: __init__.py  cli.py
src/voice_to_fhir/capture/: __init__.py  audio_capture.py  audio_utils.py  vad.py
src/voice_to_fhir/extraction/: __init__.py  extraction_types.py  medgemma_client.py  medgemma_local.py  order_diagnosis_linker.py  post_processor.py
src/voice_to_fhir/extraction/prompts/: __init__.py  cardiology.txt  consult.txt  discharge.txt  emergency.txt  followup.txt  general.txt  hp.txt  icu.txt  intake.txt  lab_review.txt  neurology.txt  pediatrics.txt  procedure.txt  progress.txt  radiology.txt  respiratory.txt  soap.txt
src/voice_to_fhir/fhir/: __init__.py  transformer.py  validators.py
src/voice_to_fhir/pipeline/: __init__.py  config.py  pipeline.py
src/voice_to_fhir/transcription/: __init__.py  medasr_client.py  medasr_local.py  transcript_types.py
tests/: __init__.py  conftest.py  fhir-script.md  test_cli.py
tests/recordings/: cardiology-consult.expected.json  cardiology-consult.webm  discharge.expected.json  discharge.webm  emergency.expected.json  emergency.webm  follow-up.expected.json  follow-up.webm  general.expected.json  general.webm  h-p.webm  hp.expected.json  icu.expected.json  icu.webm  intake.expected.json  intake.webm  lab-review.expected.json  lab-review.webm  neurology.expected.json  neurology.webm  pediatrics.expected.json  pediatrics.webm  procedure.expected.json  procedure.webm  radiology.expected.json  radiology.webm  respiratory.expected.json  respiratory.webm  soap.expected.json  soap.webm
tests/test_capture/: __init__.py  test_audio_capture.py  test_audio_utils.py  test_vad.py
tests/test_extraction/: __init__.py  test_extraction_types.py  test_medgemma_client.py  test_prompts.py
tests/test_fhir/: __init__.py  test_transformer.py  test_validators.py
tests/test_pipeline/: __init__.py  test_config.py  test_pipeline.py
tests/test_transcription/: __init__.py  test_medasr_client.py  test_transcript_types.py
