[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleansheet-voice-to-fhir"
version = "0.1.0"
description = "Edge-deployable clinical voice documentation using MedASR and MedGemma"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Cleansheet LLC", email = "dev@cleansheet.info" }
]
keywords = [
    "healthcare",
    "fhir",
    "voice",
    "transcription",
    "medical",
    "asr",
    "clinical",
    "ehr",
    "medgemma",
    "medasr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
dependencies = [
    "huggingface_hub>=0.20.0",
    "transformers>=4.36.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "fhir.resources>=7.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
gpu = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "onnxruntime-gpu>=1.16.0",
]
jetson = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    # tensorrt installed via JetPack
]

[project.urls]
Homepage = "https://github.com/CleansheetLLC/cleansheet-voice-to-fhir"
Documentation = "https://github.com/CleansheetLLC/cleansheet-voice-to-fhir#readme"
Repository = "https://github.com/CleansheetLLC/cleansheet-voice-to-fhir"
Issues = "https://github.com/CleansheetLLC/cleansheet-voice-to-fhir/issues"

[project.scripts]
voice-to-fhir = "voice_to_fhir.cli:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/voice_to_fhir"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/examples",
    "/clinical-workflows",
    "/reference-architectures",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["voice_to_fhir"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
